--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,6 +1,6 @@
 {
   "packageDirectories": [
-    { "path": "force-app/main", "default": true },
+    { "path": "force-app", "default": true },
     { "path": "force-app/common-e360", "default": false }
   ],
   "namespace": "",
